yaml/mysqlstatefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db2
spec:
  replicas: 1
  serviceName: mysql-svc
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: grovince/rapa_db:v1
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: conf
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: conf
          configMap:
            name: mysql-cnf
  volumeClaimTemplates: 
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: aws-sc-ebs 
        resources:
          requests:
            storage: 1Gi
