yaml/argocd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-svc
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
